--- a/openApiDocs/beta/Reports.yml
+++ b/openApiDocs/beta/Reports.yml
@@ -1187,7 +1187,11 @@ paths:
     get:
       tags:
         - auditLogs.selfServiceSignUp
-      summary: Get signUps from auditLogs
+      summary: List signUps
+      description: 'Retrieve the Microsoft Entra External ID user selfServiceSignUps events for your tenant.  The maximum and default page size is 1,000 objects and by default, the most recent sign-ups are returned first. Only sign-up events that occurred within the Microsoft Entra ID default retention period are available.'
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/auditlogroot-list-signups?view=graph-rest-beta
       operationId: auditLog_ListSignUp
       parameters:
         - $ref: '#/components/parameters/top'
@@ -1260,7 +1264,11 @@ paths:
     get:
       tags:
         - auditLogs.selfServiceSignUp
-      summary: Get signUps from auditLogs
+      summary: Get selfServiceSignUp
+      description: 'Retrieve a specific Microsoft Entra External ID user selfServiceSignUp event for your tenant.  '
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/selfservicesignup-get?view=graph-rest-beta
       operationId: auditLog_GetSignUp
       parameters:
         - name: selfServiceSignUp-id
@@ -21444,11 +21452,13 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.signIn'
+          description: Represents Microsoft Entra sign-in events. Read-only. Nullable.
           x-ms-navigationProperty: true
         signUps:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.selfServiceSignUp'
+          description: Represents sign up events in Microsoft Entra External ID. Read-only. Nullable.
           x-ms-navigationProperty: true
       additionalProperties:
         type: object
@@ -21906,30 +21916,38 @@ components:
           properties:
             appDisplayName:
               type: string
+              description: 'App name displayed in the Microsoft Entra admin center.  Supports $filter (eq, startsWith).'
               nullable: true
             appId:
               type: string
+              description: Unique GUID that represents the app ID in the Microsoft Entra ID.  Supports $filter (eq).
               nullable: true
             appliedEventListeners:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.appliedAuthenticationEventListener'
+              description: 'Detailed information about the listeners, such as Azure Logic Apps and Azure Functions, which the corresponding events in the sign-up event triggered.'
             correlationId:
               type: string
+              description: The request ID sent from the client when the sign-up is initiated. Used to troubleshoot sign-up activity.  Supports $filter (eq).
             createdDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
+              description: 'Date and time (UTC) the sign-up was initiated. Example: midnight on Jan 1, 2014 is reported as 2014-01-01T00:00:00Z.  Supports $orderby, $filter (eq, le, and ge).'
               format: date-time
             signUpIdentity:
               $ref: '#/components/schemas/microsoft.graph.signUpIdentity'
             signUpIdentityProvider:
               type: string
+              description: 'Describes the type of account for which the user registered. Values include Email OTP, Email Password, Google.'
             signUpStage:
               $ref: '#/components/schemas/microsoft.graph.signUpStage'
             status:
               $ref: '#/components/schemas/microsoft.graph.signUpStatus'
-            userSnapshot:
-              $ref: '#/components/schemas/microsoft.graph.ciamUserSnapshot'
+            userId:
+              type: string
+              description: The identifier of the user object created during the sign-up.
+              nullable: true
           additionalProperties:
             type: object
     microsoft.graph.deviceManagementReports:
@@ -24802,6 +24820,7 @@ components:
       properties:
         signUpIdentifier:
           type: string
+          description: The identification that the user is trying to utilize to sign up.
           nullable: true
         signUpIdentifierType:
           $ref: '#/components/schemas/microsoft.graph.signUpIdentifierType'
@@ -24825,23 +24844,18 @@ components:
       properties:
         additionalDetails:
           type: string
+          description: Provides additional details on the sign-up activity.
           nullable: true
         errorCode:
           maximum: 2147483647
           minimum: -2147483648
           type: number
+          description: Provides the 5-6 digit error code that's generated during a sign-up failure.
           format: int32
         failureReason:
           type: string
+          description: Provides the error message or the reason for failure for the corresponding sign-up activity.
           nullable: true
-      additionalProperties:
-        type: object
-    microsoft.graph.ciamUserSnapshot:
-      title: ciamUserSnapshot
-      type: object
-      properties:
-        userId:
-          type: string
       additionalProperties:
         type: object
     microsoft.graph.deviceManagementReportStatus:
@@ -25033,6 +25047,7 @@ components:
         - fido
         - appPassword
         - unknownFutureValue
+        - externalAuthMethod
       type: string
     microsoft.graph.healthMonitoring.emailNotificationConfiguration:
       title: emailNotificationConfiguration
@@ -25055,6 +25070,7 @@ components:
         - compliantDeviceSignInFailure
         - unknownFutureValue
         - conditionalAccessBlockedSignIn
+        - samlSignInFailure
       type: string
     microsoft.graph.healthMonitoring.category:
       title: category
@@ -25093,6 +25109,7 @@ components:
         - devices
         - unknownFutureValue
         - conditionalAccess
+        - saml
       type: string
     microsoft.graph.healthMonitoring.signals:
       allOf:
@@ -25178,6 +25195,7 @@ components:
         - fido
         - appPassword
         - unknownFutureValue
+        - externalAuthMethod
       type: string
     microsoft.graph.featureType:
       title: featureType
@@ -25901,11 +25919,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the identity. This property is read-only.
+          description: 'The display name of the identity. For drive items, the display name might not always be available or up to date. For example, if a user changes their display name the API might show the new value in a future response, but the items associated with the user don''t show up as changed when using delta.'
           nullable: true
         id:
           type: string
-          description: The identifier of the identity. This property is read-only.
+          description: 'Unique identifier for the identity or actor. For example, in the access reviews decisions API, this property might record the id of the principal, that is, the group, user, or application that''s subject to review.'
           nullable: true
       additionalProperties:
         type: object
