--- a/openApiDocs/v1.0/Reports.yml
+++ b/openApiDocs/v1.0/Reports.yml
@@ -7908,6 +7908,116 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: action
+  /reports/partners/billing/reconciliation/unbilled:
+    get:
+      tags:
+        - reports.partners
+      summary: Get unbilled from reports
+      operationId: report.partner.billing.reconciliation_GetUnbilled
+      parameters:
+        - name: $select
+          in: query
+          description: Select properties to be returned
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              type: string
+        - name: $expand
+          in: query
+          description: Expand related entities
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              type: string
+      responses:
+        2XX:
+          description: Retrieved navigation property
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.partners.billing.unbilledReconciliation'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    patch:
+      tags:
+        - reports.partners
+      summary: Update the navigation property unbilled in reports
+      operationId: report.partner.billing.reconciliation_UpdateUnbilled
+      requestBody:
+        description: New navigation property values
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/microsoft.graph.partners.billing.unbilledReconciliation'
+        required: true
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.partners.billing.unbilledReconciliation'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    delete:
+      tags:
+        - reports.partners
+      summary: Delete navigation property unbilled for reports
+      operationId: report.partner.billing.reconciliation_DeleteUnbilled
+      parameters:
+        - name: If-Match
+          in: header
+          description: ETag
+          style: simple
+          schema:
+            type: string
+      responses:
+        2XX:
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+  /reports/partners/billing/reconciliation/unbilled/microsoft.graph.partners.billing.export:
+    post:
+      tags:
+        - reports.partners
+      summary: Invoke action export
+      operationId: report.partner.billing.reconciliation.unbilled_export
+      requestBody:
+        description: Action parameters
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                currencyCode:
+                  type: string
+                  nullable: true
+                billingPeriod:
+                  $ref: '#/components/schemas/microsoft.graph.partners.billing.billingPeriod'
+                attributeSet:
+                  $ref: '#/components/schemas/microsoft.graph.partners.billing.attributeSet'
+              additionalProperties:
+                type: object
+        required: true
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.partners.billing.operation'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: action
   /reports/partners/billing/usage:
     get:
       tags:
@@ -9112,6 +9222,8 @@ components:
           properties:
             billed:
               $ref: '#/components/schemas/microsoft.graph.partners.billing.billedReconciliation'
+            unbilled:
+              $ref: '#/components/schemas/microsoft.graph.partners.billing.unbilledReconciliation'
           additionalProperties:
             type: object
     microsoft.graph.partners.billing.billedReconciliation:
@@ -9126,6 +9238,20 @@ components:
       enum:
         - full
         - basic
+        - unknownFutureValue
+      type: string
+    microsoft.graph.partners.billing.unbilledReconciliation:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: unbilledReconciliation
+          type: object
+          additionalProperties:
+            type: object
+    microsoft.graph.partners.billing.billingPeriod:
+      title: billingPeriod
+      enum:
+        - current
+        - last
         - unknownFutureValue
       type: string
     microsoft.graph.partners.billing.azureUsage:
@@ -9154,13 +9280,6 @@ components:
           type: object
           additionalProperties:
             type: object
-    microsoft.graph.partners.billing.billingPeriod:
-      title: billingPeriod
-      enum:
-        - current
-        - last
-        - unknownFutureValue
-      type: string
     microsoft.graph.securityReportsRoot:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
